@@ -215,9 +215,9 @@ main (int argc, char **argv)
 	gint token, res;
 	gchar *restart_args[3];
 
-	bindtextdomain (PACKAGE, GNOMELOCALEDIR);
-	bind_textdomain_codeset (PACKAGE, "UTF-8");
-	textdomain (PACKAGE);
+	bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
+	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+	textdomain (GETTEXT_PACKAGE);
 
 	glade_gnome_init ();
 	res = gnome_capplet_init ("background-properties-capplet",
