@@ -1,3 +1,8 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* background-properties-capplet.c (main): s/PACKAGE/GETTEXT_PACKAGE/g
+	* main.c: Same here.
+	
 2002-02-17  Bradford Hovinen  <hovinen@ximian.com>
 
 	* background-properties-capplet.c (main)
